<resources>
    <string name="app_name" translatable="false">DSTOCK</string>
    <string name="btn_eng">English</string>
    <string name="btn_sin">සිංහල</string>
    <string name="btn_tam">தமிழ்</string>
    <string name="btn_add">ADD</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_create">Create</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_ok">OKAY</string>
    <string name="btn_yes">yes</string>
    <string name="btn_no">no</string>
    <string name="btn_view">VIEW</string>
    <string name="btn_proceed">PROCEED</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_skip">SKIP NOW</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_get_started">GET STARTED</string>
    <string name="label_create_date">CREATED DATE</string>
    <string name="label_modified_date">MODIFIED DATE</string>
    <string name="label_route">ROUTE</string>
    <string name="label_customer">CUSTOMERS</string>
    <string name="label_settings">SETTINGS</string>
    <string name="msg_are_u_sure">Are You Sure?</string>
    <string name="msg_confirm_delete">"Do you really want to delete this "</string>
    <string name="msg_confirm_delete_canot_be_undone">This Process cannot be undone.</string>
    <string name="error_msg_mandatory">This field is required</string>
    <string name="bottom_sales">SALES</string>
    <string name="bottom_home">HOME</string>
    <string name="bottom_customer">CUSTOMERS</string>
    <string name="bottom_item">ITEMS</string>
    <string name="bottom_routes">ROUTES</string>
    <string name="label_search">Search Route</string>
    <string name="label_no_data">No Routes to show. Press + button to add a new Route.</string>
    <string name="no_top_route">No Routes to show.</string>
    <string name="label_start_location">Start Location *</string>
    <string name="label_end_location">End Location *</string>
    <string name="label_distance">Distance</string>
    <string name="label_unit_distance">KM</string>
    <string name="switch_set_as_default">My Default Route</string>
    <string name="helptxt_start_location">Enter Route Start Location</string>
    <string name="helptxt_end_location">Enter Route End Location</string>
    <string name="helptxt_distance_location">Enter Total Distance of the Route</string>
    <string name="msg_route_add_succesfull">Route added successfully.</string>
    <string name="msg_route_add_unsuccesfull">Route addition unsuccessful.</string>
    <string name="error_msg_max_characters">Maximum Characters can be entered is</string>
    <string name="error_msg_max_distance">Maximum distance can be entered is</string>
    <string name="label_route_id">ROUTE ID</string>
    <string name="label_total_customers">TOTAL CUSTOMERS</string>
    <string name="label_to">To</string>
    <string name="msg_route_update_succesfull">Route update successfully.</string>
    <string name="msg_route_update_unsuccesfull">Route update unsuccessful.</string>
    <string name="msg_oops"> OOPS </string>
    <string name="msg_unable_delete">Unable to Delete at this moment</string>
    <string name="msg_retry_delete">There are customers saved in this route.Please retry after deleting customers.</string>
    <string name="msg_route_delete_succesfull">Route delete successfully.</string>
    <string name="msg_route_delete_unsuccesfull">Route deletion unsuccessful.</string>
    <string name="store_desc">Hi welcome to my store at polgahavelw</string>
    <string name="store_banner_desc">This is my store welcome Back</string>
    <string name="notification_title">Notification</string>
    <string name="setting">Settings</string>
    <string name="header_route">MY ROUTES</string>
    <string name="header_manage_route">MANAGE ROUTE</string>
    <string name="header_create_route">CREATE ROUTE</string>
    <string name="header_item">ITEMS</string>
    <string name="header_update_item">UPDATE ITEM</string>
    <string name="header_add_customer">ADD CUSTOMER</string>
    <string name="add_item_header">Add Item</string>
    <string name="CreatePage">Create an Item</string>
    <string name="no_items">No items to show. Press + button to add a new item.</string>
    <string name="no_top_item">No items to show.</string>
    <string name="qrgenerate_btn">Generate QR</string>
    <string name="btncal">Calculation</string>
    <string name="Item_calculation">ITEM CALCULATION</string>
    <string name="Expected_profit"> EXPECTED PROFIT </string>
    <string name="share">SHARE</string>
    <string name="enter_iname">Enter Item Name</string>
    <string name="enter_ibrand">Enter Item Brand</string>
    <string name="enter_idesc">Enter Item Description</string>
    <string name="enter_icount">Enter Item Count</string>
    <string name="enter_ibuy">Enter Buying Price (per item)</string>
    <string name="enter_isell">Enter Selling Price (per item)</string>
    <string name="iname_update">Item Name</string>
    <string name="idesc_update">Item Description</string>
    <string name="icode_update">Item Code</string>
    <string name="ibrand_update">Item Brand</string>
    <string name="icount_update">Item Count</string>
    <string name="ibuy_update">Item Buy Price (per item)</string>
    <string name="isell_update">Item Sell Price (per item)</string>
    <string name="buyprice_cal">Enter Buy Price (per item)</string>
    <string name="sellprice_cal">Enter Sell Price (per item)</string>
    <string name="itemcount_cal">Enter Item Count</string>
    <string name="cost_cal">Enter Cost</string>
    <string name="ibuy_view">Buy Price (per item)</string>
    <string name="isell_view">Sell Price (per Item)</string>
    <string name="cus_label">Customer</string>
    <string name="date_label">Date</string>
    <string name="prod_label">Products</string>
    <string name="cus_name_ph">Customer Name</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="search_id_des">Search by ID or Description</string>
    <string name="id">ID</string>
    <string name="des">Description</string>
    <string name="unit_price">Unit Price</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="sub_total">Sub Total</string>
    <string name="qty">Qty</string>
    <string name="urgent">Mark as urgent</string>
    <string name="create_so">Create Sales Order</string>
    <string name="manage_so">Manage Sales Order</string>
    <string name="update_so">Update Sales Order</string>
    <string name="delete_so">Delete Sales Order</string>
    <string name="view_so">View Sales Orders</string>
    <string name="sales_orders">Sales Orders</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="update_payment">Update Payment</string>
    <string name="due_payments">View Due Payments</string>
    <string name="view_sales_summary">View Sales Summary</string>
    <string name="monthly_sales">Monthly Sales</string>
    <string name="monthly_profit">Monthly Profit</string>
    <string name="items">Items</string>
    <string name="customers">Customers</string>
    <string name="routes">Routes</string>
    <string name="sales">Sales</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="print">Print</string>
    <string name="inv_no">Invoice No. *</string>
    <string name="pay_due">Payment Due</string>
    <string name="pay_amt">Payment Amount *</string>
    <string name="pay_date">Payment Date *</string>
    <string name="bal_due">Balance Due</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="status">Status</string>
    <string name="tot_sales">Total Sales</string>
    <string name="tot_cus">No. of Customers</string>
    <string name="tot_sold">No. of Items Sold</string>
    <string name="received_payment">Payment Received</string>
    <string name="avg_sales">Average Daily Sales</string>
    <string name="tot_sales_val" translatable="false">0.00</string>
    <string name="tot_cus_val" translatable="false">0</string>
    <string name="tot_sold_val" translatable="false">0</string>
    <string name="received_payment_val" translatable="false">0.00</string>
    <string name="payment_due_val" translatable="false">0.00</string>
    <string name="avg_sales_val" translatable="false">0.00</string>
    <string name="monthly_sales_val" translatable="false">0.00</string>
    <string name="monthly_profit_val" translatable="false">0.00</string>
    <string name="del_date">Delivery Date</string>
    <string name="label_no_so">No sales orders to show. Press + button to add a new sales order.</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Channel Descrption</string>
    <string-array name="customers_array">
        <item>C01 - Customer 01</item>
        <item>C02 - Customer 02</item>
        <item>C03 - Customer 03</item>
        <item>C04 - Customer 04</item>
        <item>C05 - Customer 05</item>
    </string-array>
    <string-array name="items_array">
        <item>I01 - Item 01</item>
        <item>I02 - Item 02</item>
        <item>I03 - Item 03</item>
        <item>I04 - Item 04</item>
        <item>I05 - Item 05</item>
    </string-array>
    <string name="ItemCreatebtn">CREATE</string>
    <string name="btn_add_pp">Add profile picture</string>
    <string name="btn_add_sp">Add store picture</string>
    <string name="hint_cus_name">Customer Name</string>
    <string name="helptxt_cus_name">Enter customer\'s first and last name</string>
    <string name="hint_store_name">Store Name</string>
    <string name="helptxt_store_name">Enter customer\'s store name</string>
    <string name="hint_cus_mobile">Phone Number</string>
    <string name="helptxt_cus_mobile">Enter customer\'s phone number</string>
    <string name="hint_cus_street_address">Street Address</string>
    <string name="helptxt_cus_street_address">Enter customer\'s street address</string>
    <string name="hint_cus_city">City</string>
    <string name="helptxt_cus_city">Enter customer\'s city</string>
    <string name="helptxt_select_route">Select route</string>
    <string name="customer_added_true">The customer added successfully.</string>
    <string name="customer_added_false">The customer added unsuccessfully.</string>
    <string name="customer_updated_true">The customer updated successfully.</string>
    <string name="customer_updated_false">The customer updated unsuccessfully.</string>
    <string name="customer_deleted_true">The customer deleted successfully.</string>
    <string name="customer_deleted_false">The customer deleted unsuccessfully.</string>
    <string name="customer_name_required">Customer name is required</string>
    <string name="store_name_required">Store name is required</string>
    <string name="mobile_10_number">Mobile cannot exceed 10 numbers</string>
    <string name="street_address_required">Street Address is required</string>
    <string name="city_required">City is required</string>
    <string name="label_cus_id">Customer ID</string>
    <string name="label_cus_address">Address</string>
    <string name="text_test_data">DB not connected</string>
    <string name="owned">owned by</string>
    <string name="located">and it located at</string>
    <string name="in">in</string>
    <string name="no_customers">No customers to show. Press + button to add a new customer.</string>
    <string name="no_top_customer">No customers to show.</string>
    <string name="title_activity_findshops">findshops</string>
    <string name="btn_search_shops">Search Shops nearby</string>
    <string name="change_language">Change Language</string>
</resources>