<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalesSummary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/profit_margin_top"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round_corner_rectangle"
        android:elevation="0dp"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:menu="@menu/top_app_bar"
        app:navigationIcon="@drawable/back_arrow_icon"
        app:title="Sales" />

    <TextView
        android:id="@+id/salessummarytextView1"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:text="@string/sales_summary"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/profit_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Field 1-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField1"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:textColorHint="?attr/colorOnSurface" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Field 2-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField2"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/filledTextField2"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/salessummarytextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/tot_sales"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/salessummarytextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tot_sales_val"
        android:textColor="@color/pacific_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/salessummarytextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/tot_cus"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/salessummarytextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tot_cus_val"
        android:textColor="@color/pacific_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/salessummarytextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/tot_sold"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/salessummarytextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tot_sold_val"
        android:textColor="@color/pacific_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/salessummarytextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/received_payment"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/salessummarytextView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView7"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/received_payment_val"
        android:textColor="@color/pacific_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/salessummarytextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/pay_due"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/salessummarytextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView9"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/payment_due_val"
        android:textColor="@color/pacific_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/salessummarytextView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView10"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/avg_sales"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/salessummarytextView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salessummarytextView11"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/avg_sales_val"
        android:textColor="@color/pacific_blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/light_blue"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/bottom"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>