<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/change_language"
        android:layout_below="@id/topAppBarParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:layout_marginTop="15dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/design_default_color_secondary_variant"
        android:text="@string/change_language" />

    <RadioGroup
        android:id="@+id/langRadioGroup"
        android:layout_below="@id/change_language"
        android:layout_marginHorizontal="34dp"
        android:layout_marginVertical="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/lang_en"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="changeLanguage"
            android:text="@string/btn_eng"/>
        <RadioButton
            android:id="@+id/lang_si"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="changeLanguage"
            android:text="@string/btn_sin"/>
        <RadioButton
            android:id="@+id/lang_tm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="changeLanguage"
            android:text="@string/btn_tam"/>
    </RadioGroup>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/topAppBarParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/transparent"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_margin="4dp"
                android:background="@drawable/round_corner_rectangle"
                android:elevation="0dp"
                app:navigationIcon="@drawable/ic_dstock_24"
                app:menu="@menu/top_app_bar"
                app:title="@string/label_settings" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/light_blue"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>