<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRoute">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar2"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round_corner_rectangle"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:menu="@menu/top_app_bar"
        app:navigationIcon="@drawable/ic_dstock_24"
        app:title="@string/header_create_route" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_Start_location_add_route"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/design_default_color_secondary_variant"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/design_default_color_secondary_variant"
                android:hint="@string/label_start_location"
                app:helperText="@string/helptxt_start_location"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_startloc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:inputType="text"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_end_location_add_route"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/design_default_color_secondary_variant"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/design_default_color_secondary_variant"
                android:hint="@string/label_end_location"
                app:helperText="@string/helptxt_end_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_endloc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/design_default_color_secondary_variant"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/design_default_color_secondary_variant"
                android:hint="@string/label_distance"
                app:helperText="@string/helptxt_distance_location"
                app:suffixText="@string/label_unit_distance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/setdistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switch_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/switch_set_as_default"
                android:thumbTextPadding="10dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonAddItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addRoute"
                android:text="@string/btn_add" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:itemBackground="@color/light_blue"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
